version/0.16/_sources/api/solver/_autosummary/settings/drag.rst.txt
:orphan:

.. _drag:

drag
====

.. autoclass:: ansys.fluent.core.solver.settings_232.drag.drag
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`force_child <force_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

